# Aurora-Board

./: .gitignore  Cargo.toml  justfile  package-lock.json  routes.org
scss/: common.scss  form.scss  home.scss  image.scss  login.scss  media_queries.scss  navbar.scss  newpost.scss  post.scss  style.scss  tabs.scss  tile.scss
src/: #main.rs#  main.rs
src/handlers/: #middleware.rs#  board.rs  home.rs  login.rs  middleware.rs  mod.rs  post.rs  reply.rs  user.rs  user.rs~  utils.rs
static/: board.js  form.js  home.js  index.html  like.js  login.html  login.html~  login.js  login.js~  main.js  newboard.html  newpost.js  post.js  search.js  sidebars.js  signup.html
static/css/: #image.css#  common.css  common.css.map  form.css  form.css.map  home.css  home.css.map  image.css  image.css.map  login.css  login.css.map  media_queries.css  navbar.css  navbar.css.map  newpost.css  newpost.css.map  post.css  post.css.map  tabs.css  tabs.css.map  tile.css  tile.css.map
static/libs/: bricks.js  knot.js
templates/: board.html  board.stpl  header.html  header.stpl  home.html  home.stpl  image_tile.html  leftside.html  leftside.stpl  loading.stpl  login.stpl  navbar.html  navbar.stpl  newpost.html  newpost.stpl  post.html  post_tile.stpl  posttemplate.html  replytemplate.html  tiletemplate.html  tiletemplate.stpl  tiletemplatehome.html  tiletemplatehome.stpl  user.html  user.stpl  user_replies.html
