
[package]
name = "aurora-board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version="4.0.1", features = ["openssl","macros"], default-features=false}
actix-files = "0.6.0"
actix-identity = "0.4.0"
actix-multipart = "0.4.0"
futures-util = { version = "0.3.21", default-features = false, features = ["std"] }
log = "0.4.14"
sailfish = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5.1", features = [ "runtime-actix-native-tls" , "mysql" ,"chrono"] }
chrono =  { version = "0.4.15", features = ["serde"] }
dotenv = "0.15.0"
anyhow = "1.0.52"
argonautica = { version = "0.2", features = ["simd"] }
futures = "0.3.19"
openssl = "0.10.38"
tokio = "1.18.2"
